Create ProductCategory and start building it's controller.

--- a/LexShop.DataAccess.InMemory/LexShop.DataAccess.InMemory.csproj
+++ b/LexShop.DataAccess.InMemory/LexShop.DataAccess.InMemory.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ProductRepository.cs" />
+    <Compile Include="ProductCategoryRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
