--- a/LexShopCore/LexShop.Core.csproj
+++ b/LexShopCore/LexShop.Core.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\ProductCategory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModel\ProductListViewModel.cs" />
     <Compile Include="ViewModel\ProductManagerViewModel.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
