--- a/LexShop.DataAccess.SQL/LexShop.DataAccess.SQL.csproj
+++ b/LexShop.DataAccess.SQL/LexShop.DataAccess.SQL.csproj
@@ -53,6 +53,10 @@
     <Compile Include="Migrations\202101121332173_Inicial.Designer.cs">
       <DependentUpon>202101121332173_Inicial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202101150830035_AddBasket.cs" />
+    <Compile Include="Migrations\202101150830035_AddBasket.Designer.cs">
+      <DependentUpon>202101150830035_AddBasket.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLRepository.cs" />
@@ -71,6 +75,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202101121332173_Inicial.resx">
       <DependentUpon>202101121332173_Inicial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202101150830035_AddBasket.resx">
+      <DependentUpon>202101150830035_AddBasket.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
