Basket Services Finished

--- a/LexShopCore/LexShop.Core.csproj
+++ b/LexShopCore/LexShop.Core.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Contract\IBasketService.cs" />
     <Compile Include="Contract\IRepository.cs" />
     <Compile Include="Models\BaseEntity.cs" />
     <Compile Include="Models\Basket.cs" />
@@ -50,6 +51,8 @@
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\ProductCategory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModel\BasketItemViewModel.cs" />
+    <Compile Include="ViewModel\BasketSummaryViewModel.cs" />
     <Compile Include="ViewModel\ProductListViewModel.cs" />
     <Compile Include="ViewModel\ProductManagerViewModel.cs" />
   </ItemGroup>
