--- a/LexShop.DataAccess.SQL/LexShop.DataAccess.SQL.csproj
+++ b/LexShop.DataAccess.SQL/LexShop.DataAccess.SQL.csproj
@@ -57,6 +57,10 @@
     <Compile Include="Migrations\202101150830035_AddBasket.Designer.cs">
       <DependentUpon>202101150830035_AddBasket.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202101151503542_AddBasket1.cs" />
+    <Compile Include="Migrations\202101151503542_AddBasket1.Designer.cs">
+      <DependentUpon>202101151503542_AddBasket1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLRepository.cs" />
@@ -78,6 +82,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202101150830035_AddBasket.resx">
       <DependentUpon>202101150830035_AddBasket.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202101151503542_AddBasket1.resx">
+      <DependentUpon>202101151503542_AddBasket1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
